--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -4,7 +4,7 @@
   <div class="golden">
     <div class="row">
       <div class="col-md-10">
-        <div class="thumbnail">
+        <div class="thumbnail dozen">
           <img src="/images/gr5.jpg" alt="golden" height="300" width="300">
           <img src="/images/gr4.jpg" alt="golden" height="300" width="300"> 
           <div class="caption">           
